2017-11-13  Gary Hai  <gary@XL59.com>

  * src/sop.app.src: Bump version to "3.1.0".

  * src/sop.erl (access): Beautify the code, handle {new, _, _} for leaf access.

2017-11-11  Gary Hai  <gary@XL59.com>

  * src/sop.erl (access): When access raw data, discard the options.

2017-10-27  Gary Hai  <gary@XL59.com>

  * src/sop.erl: Fix minor issue of dialyzer of missing 'prop' actor type.

2017-10-26  Gary Hai  <gary@XL59.com>

  * src/sop.app.src: Bump version to "3.0.1".

  * src/sop.erl (access): Simplify new data with key for map type data.

2017-10-19  Gary Hai  <gary@XL59.com>

  * src/sop.app.src: Bump version to "v3.0.0" for external commit.

2017-10-18  Gary Hai  <gary@XL59.com>

  * src/sop.erl (handle_info): Accept 'stop' command without reason.

2017-10-15  Gary Hai  <gary@XL59.com>

  * src/sop.erl (attach): Add existence check and remove "fun attach/2".

2017-10-14  Gary Hai  <gary@XL59.com>

  * src/sop.erl (create): Fix bug of enable function calling.

2017-10-13  Gary Hai  <gary@XL59.com>

  * src/sop.erl (enable): Fix bug of missing argument.

2017-10-06  Gary Hai  <gary@XL59.com>

  * src/sop.erl (create): CHANGELOG file generated by change-log mode.

CHANGELOG
=========

devel
-----

- `fun create/1` behaviors templates are more flexible.
- Return value format of `fun invoke/4` changed from result() to state().
- Add map-reduce feature.
- Export `fun localize/2` and `fun map_reduce/4`.
- Optimize `refer`, reduce 14.4% of the calling times on `on_event`.
- Combine `fun refer/4` into `fun invoke/4`.
- result() now can be single state().
- Remove functions of `refer, response, request, do_`.
- `fun props_do/2` do not check attribute existence yet. And support root
  operations.
- FSM 'do_state' support 'exit(Reason)' in state actions.
- 'invoke/4' return state() or stop() to avoid performance pitfall of exit
  try/catch.
- Make 'stop' command be unconditional. Cannot be overrided by 'do' action.
- 'stop' command must be '{stop, Reason}' format.